--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-tooltip": "^4.2.21",
     "sass": "^1.43.2"
   },
   "devDependencies": {
