--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "react",
+  "name": "memy",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-tooltip": "^4.2.21",
+    "@rollup/plugin-replace": "^5.0.2",
+    "html2canvas": "^1.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.0.2",
+    "react-tooltip": "^5.21.4",
     "react-typed": "^1.2.0",
-    "sass": "^1.43.2"
+    "sass": "^1.67.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.6",
-    "vite": "^2.6.10"
+    "vite": "^4.4.9"
   }
 }
